--- a/weatherApp/src/pages/index.html
+++ b/weatherApp/src/pages/index.html
@@ -11,28 +11,52 @@
             <!-- Carousel wrapper -->
             <!-- Item 1 -->
             <div class="overflow-hidden relative rounded-lg h-96">
-                <div class="hidden duration-700 ease-in-out sliderFather" data-carousel-item>
+                <div class="hidden duration-700 ease-in-out" data-carousel-item>
                     <!-- <img src="https://flowbite.com/docs/images/carousel/carousel-2.svg" class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="..."> -->
                     <div class="text-white">
                         <div class="font-sans overflow-hidden bg-gray-800 shadow-lg sm:rounded-lg rounded-none h-96">
-                            <div class="current-weather flex items-center justify-between px-6 py-8 bg-gray-700">
+                            <div class="current-weather flex items-center justify-between px-6 py-8 bg-gray-700 sliderFather">
                                 <div class="flex items-center">
-                                    <div>
-                                        <div class="font-semibold text-6xl">20˚C</div>
-                                        <div>Feel like 30˚C</div>
+                                    <div class="flex flex-col justify-between mr-4">
+                                        <div class="font-semibold text-2xl text-orange-400">SUN, 18 SEP 2022</div>
+                                        <div class="font-semibold text-6xl">25.5˚C</div>
                                     </div>
-                                    <div class="mx-5">
-                                        <div class="font-semibold">rain</div>
-                                        <div>thai nguyen</div>
+                                    <div class="flex ml-10 items-end h-[97px]">
+                                        <div>
+                                            <div>cloundy</div>
+                                            <div> in <strong class="font-bold">Hà Nội</strong></div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div>
-                                    <img src="" alt="">
+                                    <img src="../icons/c02d.png" alt="" class="h-[120px]">
                                 </div>
                             </div>
-                            <!-- end current-weather -->
+
+
+                            <!-- clock -->
+                            <section class="flex justify-center items-center text-black h-[224px]">
+                                <div class="text-center">
+                                    <div
+                                        class="flex justify-center rounded-2xl py-8 mx-4 gap-8 text-orange-400 md:font-semibold md:text-4xl text-5xl font-bold">
+                                        <div class="flex flex-col">
+                                            <div id="hours"></div>
+                                        </div>
+                                        <span class="animate-pulse-1s">:</span>
+                                        <div class="flex-col flex">
+                                            <div id="mins"></div>
+                                        </div>
+                                        <span class="animate-pulse-1s md:block hidden">:</span>
+                                        <div class="flex-col md:block hidden">
+                                            <div id="secs"></div>
+                                        </div>
+                                        <span id="session"></span>
+                                    </div>
+                                </div>
+                            </section>
+                            <!-- clock -->
+
                         </div>
-                        <!-- end weather-container -->
                     </div>
                 </div>
                 <!-- Item 2 -->
@@ -63,30 +87,20 @@
                         <tbody class="list">
                             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
                                 <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white day">
-                                    2022-0
                                 </th>
                                 <td class="py-4 px-6 maxTemp">
-                                    27
                                 </td>
                                 <td class="py-4 px-6 minTemp">
-                                    25
                                 </td>
                                 <td class="py-4 px-6 weather">
-                                    rain
                                 </td>
                                 <td class="py-4 px-6 icon">
-                                    <img src="">
                                 </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 </div>
-            </div>
-            <!-- Slider indicators -->
-            <div class="flex absolute bottom-5 left-1/2 z-30 space-x-3 -translate-x-1/2">
-                <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 1" data-carousel-slide-to="0"></button>
-                <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
             </div>
             <!-- Slider controls -->
             <button type="button" class="flex absolute top-0 md:left-[-80px] left-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none" data-carousel-prev>
@@ -102,51 +116,9 @@
                 </span>
             </button>
         </div>
-        <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
     </div>
-
-  <!-- <div class="overflow-x-auto relative">
-    <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-            <tr>
-                <th scope="col" class="py-3 px-6">
-                    Date
-                </th>
-                <th scope="col" class="py-3 px-6">
-                    max temperature
-                </th>
-                <th scope="col" class="py-3 px-6">
-                    min temperature
-                </th>
-                <th scope="col" class="py-3 px-6">
-                    weather
-                </th>
-                <th scope="col" class="py-3 px-6">
-                    icon
-                </th>
-            </tr>
-        </thead>
-        <tbody class="father">
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white day">
-                    2022-0
-                </th>
-                <td class="py-4 px-6 maxTemp">
-                    27
-                </td>
-                <td class="py-4 px-6 minTemp">
-                    25
-                </td>
-                <td class="py-4 px-6 weather">
-                    rain
-                </td>
-                <td class="py-4 px-6 icon">
-                    <img src="">
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div> -->
 </body>
-<script src="../js/app.js"></script>
+<script src="../js/slider.js"></script>
+<script type="module" src="../js/app.js"></script>
+<script src="../js/clock.js"></script>
 </html>
