--- a/tkb/index.html
+++ b/tkb/index.html
@@ -91,6 +91,6 @@
       </div>
     </div>
   </body>
-  <script src="./access/app.js"></script>
+  <script type="module" src="./access/app.js"></script>
   <!-- <script src="./access/test.js"></script> -->
 </html>
