--- a/tkb/index_ex.html
+++ b/tkb/index_ex.html
@@ -8,68 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="file" id="fileUpload" />
-<input type="button" id="upload" value="Upload" onclick="UploadProcess()" />
+    <input type="file" id="fileUpload" value="alo"/>
+    <input type="button" id="upload" value="Upload" />
 <br/>
-
+    <button class="test">download</button>
 <div id="ExcelTable"></div>
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.13.5/xlsx.full.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.13.5/jszip.js"></script>
-<script type="text/javascript">
-    function UploadProcess() {
-        //Reference the FileUpload element.
-        var fileUpload = document.getElementById("fileUpload");
- 
-        //Validate whether File is valid Excel file.
-        var regex = /^([a-zA-Z0-9\s_\\.\-:])+(.xls|.xlsx)$/;
-        if (regex.test(fileUpload.value.toLowerCase())) {
-            if (typeof (FileReader) != "undefined") {
-                var reader = new FileReader();
- 
-                //For Browsers other than IE.
-                if (reader.readAsBinaryString) {
-                    reader.onload = function (e) {
-                        GetTableFromExcel(e.target.result);
-                    };
-                    reader.readAsBinaryString(fileUpload.files[0]);
-                } else {
-                    //For IE Browser.
-                    reader.onload = function (e) {
-                        var data = "";
-                        var bytes = new Uint8Array(e.target.result);
-                        for (var i = 0; i < bytes.byteLength; i++) {
-                            data += String.fromCharCode(bytes[i]);
-                        }
-                        GetTableFromExcel(data);
-                    };
-                    reader.readAsArrayBuffer(fileUpload.files[0]);
-                }
-            } else {
-                alert("This browser does not support HTML5.");
-            }
-        } else {
-            alert("Please upload a valid Excel file.");
-        }
-    };
-    function GetTableFromExcel(data) {
-        var workbook = XLSX.read(data, {
-            type: 'binary'
-        });
-
-        var Sheet = workbook.SheetNames[0];
-
-        var excelRows = XLSX.utils.sheet_to_row_object_array(workbook.Sheets[Sheet]);
-
-        excelRows.forEach((element,index) => {
-            // console.log(getObjKey(element, 'KHOA CÔNG NGHỆ THÔNG TIN - ĐHTN'));
-            if(element['KHOA CÔNG NGHỆ THÔNG TIN - ĐHTN']/2){
-                if(element.__EMPTY_2 == undefined){
-                    element.__EMPTY_2 = excelRows[index-1].__EMPTY_2
-                }
-                console.log(element.__EMPTY_2 + ' - ' + element.__EMPTY_6);
-            };
-        });
-    };
-</script>
+<script type="module" src="access/read.js"></script>
 </html>
