--- a/tkb/src/pages/index.html
+++ b/tkb/src/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./access/app.css">
+    <link rel="stylesheet" href="../css/app.css">
     <title>Document</title>
 </head>
 <body>
@@ -46,6 +46,6 @@
       </div>
     </div>
   </body>
-  <script type="module" src="./access/app.js"></script>
+  <script type="module" src="../js/app.js"></script>
   <!-- <script src="./access/test.js"></script> -->
 </html>
