--- a/tkb/src/pages/index.html
+++ b/tkb/src/pages/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container">
+      <div class="banner">
+        <span class="banner-day">20</span>
+      </div>
       <div class="card">
         <div class="front">
           <div class="contentfront">
@@ -39,7 +42,6 @@
         <div class="back">
           <div class="contentback">
             <div class="backcontainer">
-              
             </div>
           </div>
         </div>
