--- a/tkb/src/pages/index.html
+++ b/tkb/src/pages/index.html
@@ -24,13 +24,13 @@
             <div class="month">
               <table>
                 <tr class="orangeTr">
-                  <th style="font-size: 14px; color: red; font-weight: 600;">S</th>
-                  <th>M</th>
-                  <th>T</th>
-                  <th>W</th>
-                  <th>T</th>
-                  <th>F</th>
-                  <th>S</th>
+                  <th class="sunday">Su</th>
+                  <th>Mo</th>
+                  <th>Tu</th>
+                  <th>We</th>
+                  <th>Th</th>
+                  <th>Fr</th>
+                  <th>Sa</th>
                 </tr>
                 <tbody id="js-calendar-body"></tbody>
               </table>
