add logout and use localstorage

--- a/tkb/src/pages/index.html
+++ b/tkb/src/pages/index.html
@@ -9,10 +9,12 @@
     <title>Document</title>
 </head>
 <body>
-  <input type="file" id="fileUpload"/>
-  <input type="button" id="upload" value="Upload" />
-<br/>
-<div id="ExcelTable"></div>
+  <button class="logout">logout</button>
+  <div class="overlay"></div>
+    <div class="blockInsert">      
+      <input type="file" id="fileUpload" hidden/>
+      <label class="labelFile" for="fileUpload">Upload File Excel của bạn</label>
+    </div>
     <div class="container">
       <body>
       <div class="banner">
